# tasker

./: Cargo.toml  Makefile  README.md  UBIQUITOUS_LANGUAGE.md
.gitea/workflows/: test_and_publish.yaml
assets/: index.html.j2  preset.html.j2  task_row.html.j2
docker/: Dockerfile  docker-compose.yaml
src/: main.rs  presets.rs  sql_connection_factory.rs  task.rs  task_repo.rs  webapp.rs
tests/e2e_tests/: basic.spec.ts  basic_flow.spec.ts  playwright.config.ts  presets.spec.ts  projects.spec.ts
