[package]
name = "tasker"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = {version = "0.8.8", features = ["macros"] }
minijinja = { version = "2.14.0", features = ["loader"] }
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["trace"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.22"
